<resources>
    <string name="app_name">Expenzo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>


    <string name="title_7_days">7 Days Analytics</string>
    <string name="subtitle_7_days">View insights for the past week Transaction</string>
    <string name="desc_7_days_icon">Icon for 7 Days Analytics</string>
    <string name="title_30_days">30 Days Analytics</string>
    <string name="subtitle_30_days">Explore Transaction over the past month</string>
    <string name="desc_30_days_icon">Icon for 30 Days Analytics</string>
</resources>